# fastapi-scaffold-template

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  run-dev.sh  run-tests.sh
backend/: .pre-commit-config.yaml  Dockerfile  README.md  log_conf.yaml  manage.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/todo/: schemas.py
backend/app/api/user/: schemas.py  views.py
backend/app/apis/: __init__.py  home.py
backend/app/apis/todo/: __init__.py  services.py  views.py
backend/app/apis/user/: __init__.py  api.py  exception.py  resource.py  role.py  schemas.py  services.py  user.py  views.py
backend/app/commons/: enums.py
backend/app/config/: __init__.py  app_config.py
backend/app/dependencies/: auth.py
backend/app/extensions/auth/: __init__.py
backend/app/extensions/cache/: __init__.py
backend/app/extensions/fastapi/: api.py  custom_type.py  exception.py  middleware.py  model.py  pagination.py  service.py
backend/app/extensions/jwt/: __init__.py
backend/app/extensions/mqtt/: __init__.py
backend/app/extensions/pydantic/: schema.py
backend/app/extensions/serializer/: json.py
backend/app/models/: __init__.py  init_data.py  resource.py  role.py  system.py  todo.py  user.py
backend/app/models/redis/: __init__.py
backend/app/services/: resource.py  role.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/apis/: conftest.py  test_login.py  test_user.py
backend/app/tests/datas/: user_data.py
backend/app/tests/services/: conftest.py  test_user.py
backend/app/utils/: routeutil.py
backend/static/: chat.html
