[tool.poetry]
name = "fastapi 框架案例"
version = "0.0.1"
description = "这是一个使用了FastAPI框架技术的Python应用示例"
authors = ["Eryx Lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
aiomysql = "^0.2.0"
sqlmodel = "^0.0.18"
python-jose = "^3.3.0"
bcrypt = "^4.1.3"
redis-om = "^0.3.1"
fastapi-cache2 = "^0.2.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
sqlalchemy-utils = "^0.41.2"
httpx = "^0.27.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
